meego-im-framework (0.20.4~1) unstable; urgency=low

  * [UNRELEASED]
  * Fixes: Rotation animation rotates to wrong orientation under high CPU load.

 -- Ning Chi <ext-chi.2.ning@nokia.com>  Wed, 23 Mar 2011 14:27:37 +0200

meego-im-framework (0.20.3-1) unstable; urgency=low

  * Fixes: NB#237804 - Unable to view the entered text in any composer

 -- Kimmo Surakka <kimmo.surakka@nokia.com>  Mon, 21 Mar 2011 11:39:00 +0200

meego-im-framework (0.20.2-1) unstable; urgency=low

  * Fixes: NB#235678 - Orientation out of sync after rotation, then switching plugins
  * Fixes: NB#235607 - Text input settings view has too large title font

 -- Ning Chi <ext-chi.2.ning@nokia.com>  Wed, 16 Mar 2011 15:37:30 +0200

meego-im-framework (0.20.1-1) unstable; urgency=low

  * Fixes: NB#231633 - [TASK] Improve Rotation Appearance of VKB

 -- Rakesh Cherian <ext-rakesh.cherian@nokia.com>  Fri, 11 Mar 2011 11:31:00 +0200

meego-im-framework (0.20.0-1) unstable; urgency=low

  * New: Remove LMT dependencies from public API

 -- Rakesh Cherian <ext-rakesh.cherian@nokia.com>  Tue, 08 Mar 2011 15:24:00 +0200

meego-im-framework (0.19.47-1) unstable; urgency=low

  * Implemented attribute extension machinery.
  * New API: MAbstractInputMethod::setKeyOverrides
  * Fixes: NB#223052 - Unreadable fonts in Text input settings (superseeds old fix)

 -- Kimmo Surakka <kimmo.surakka@nokia.com>  Fri, 04 Mar 2011 14:01:00 +0200

meego-im-framework (0.19.46-1) unstable; urgency=low

  * Fixes: NB#230421 - Settings plugin needs to be moved to Time & language category
  * Fixes: NB#223052 - Unreadable fonts in Text input settings

 -- Pekka Vuorela <pekka.ta.vuorela@nokia.com>  Wed, 02 Mar 2011 13:55:31 +0200

meego-im-framework (0.19.45-1) unstable; urgency=low

  * New release

 -- Pekka Vuorela <pekka.ta.vuorela@nokia.com>  Wed, 02 Mar 2011 13:46:34 +0200

meego-im-framework (0.19.44-1) unstable; urgency=low

  * Fix: small window shown at initial run.